<resources>
    <string name="app_name">RichoNews</string>
    <string name="news_title">Imgur matures into a meme social network with chat and following</string>
    <string name="news_author">Josh Constine</string>
    <string name="news_date">2016-12-13</string>
    <string name="news_meta">Josh Constine / 2016-12-13</string>
    <string name="news_description">Google dropped a single National Security Letter into its most recent transparency report without much fanfare, but today the company published eight more..</string>

    <string name="action_rate">Rate</string>
    <string name="action_browser">Open in browser</string>
    <string name="action_share">Share</string>

    <string name="rating">Rating</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="sharing_title">Share the news with</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
