<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher_news" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/NewsTitleFont"
            android:text="@string/news_title" />

        <TextView
            android:id="@+id/tvAuthor"
            style="@style/NewsAuthorFont"
            android:text="@string/news_author" />

        <TextView
            android:id="@+id/tvDate"
            style="@style/NewsDateFont"
            android:text="@string/news_date" />
    </LinearLayout>
</LinearLayout>
